--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Etch A Sketch</title>
+    <meta charset="UTF-8" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Geostar|Raleway&display=swap"
+      rel="stylesheet"
+    />
+    <link href="src/styles.css" type="" />
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
+  <body>
+    <h1>Etch-A-Sketch</h1>
+    <div id="grid"></div>
 
-<body>
-	<div id="app"></div>
+    <footer class="attributions">
+      <p>
+        Made by
+        <a href="https://github.com/anncancode" target="_blank">Ann Nguyen</a>
+        for
+        <a href="https://bit.ly/2Zad7lw" target="_blank">The Odin Project</a>.
+      </p>
+    </footer>
 
-	<script src="src/index.js">
-	</script>
-</body>
-
+    <script src="src/index.js"></script>
+  </body>
 </html>
