--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <h1>Etch-A-Sketch</h1>
     <div id="grid"></div>
 
+    <div>
+      <button id="clear">Clear</button>
+      make new grid (how many squares per side, max 64),
+    </div>
+
     <footer class="attributions">
       <p>
         Made by
