--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Geostar|Raleway&display=swap"
       rel="stylesheet"
     />
-    <link href="src/styles.css" type="" />
+    <link href="src/styles.css" rel="stylesheet" />
   </head>
 
   <body>
