--- a/index.html
+++ b/index.html
@@ -11,13 +11,32 @@
   </head>
 
   <body>
-    <h1>Etch-A-Sketch</h1>
-    <div id="grid"></div>
+    <div class="container">
+      <h1>Etch-A-Sketch</h1>
+      <div id="grid"></div>
 
-    <div>
-      <button id="clear">Clear</button>
-      make new grid (how many squares per side, max 64),
+      <div>
+        <button id="clear">Clear</button>
+      </div>
+
+      <div>
+        <input type="color">
+      </div>
+
+      <div>
+        <input
+          id="sidesValue"
+          type="number"
+          min="2"
+          max="64"
+          size="3"
+          placeholder="2 - 64"
+        />
+        <button id="sides">Change Size!</button>
+      </div>
     </div>
+
+    <div id="test" style="background-color: cyan">.</div>
 
     <footer class="attributions">
       <p>
