--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
       <div id="grid"></div>
 
       <div>
-        <button id="clear">Clear</button>
+        <button id="clear">Clear Sketch</button>
+        <button id="eraser">Eraser</button>
       </div>
 
       <div>
-        <input type="color">
+        Pick your color!
+        <input type="color" id="colorPicker" value="#000000" />
+        <button id="rainbow">Rainbow</button>
       </div>
 
       <div>
@@ -28,15 +31,13 @@
           id="sidesValue"
           type="number"
           min="2"
-          max="64"
+          max="100"
           size="3"
-          placeholder="2 - 64"
+          placeholder="2 - 100"
         />
         <button id="sides">Change Size!</button>
       </div>
     </div>
-
-    <div id="test" style="background-color: cyan">.</div>
 
     <footer class="attributions">
       <p>
