added shader functionality
still need to fix logic

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div>
         <button id="clear">Clear Sketch</button>
         <button id="eraser">Eraser</button>
+        <button id="shade">Shader</button>
       </div>
 
       <div>
