--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="knob" id="clear"><p>clear</p></div>
         <div>
           <span class="button" id="black">Black</span>
-          <span class="button" id="shade"><strike>Shader</strike></span> 
+          <span class="button" id="shade">Shader</span> 
           <span class="button" id="rainbow">Rainbow</span>
         </div>
         <div class="knob" id="eraser"><p>eraser</p></div>
