fix broken link

--- a/index.html
+++ b/index.html
@@ -19,28 +19,34 @@
         <div class="knob" id="clear"><p>clear</p></div>
         <div>
           <span class="button" id="black">Black</span>
-          <span class="button" id="shade">Shader</span> 
+          <span class="button" id="shade">Shader</span>
           <span class="button" id="rainbow">Rainbow</span>
         </div>
         <div class="knob" id="eraser"><p>eraser</p></div>
       </div>
     </div>
 
-    <div class="extra" >
+    <div class="extra">
       <div>
         <p>Pick Your Color!</p>
         <input type="color" id="colorPicker" value="#000000" />
       </div>
-      <div>    
+      <div>
         <p id="sides">Change Size!</p>
-        <input id="sidesValue" type="number" min="2" max="100" placeholder="2 - 100"/>
+        <input
+          id="sidesValue"
+          type="number"
+          min="2"
+          max="100"
+          placeholder="2 - 100"
+        />
       </div>
     </div>
 
     <footer class="attributions">
       <p>
         Made by
-        <a href="https://github.com/anncancode" target="_blank">Ann Nguyen</a>
+        <a href="https://github.com/ann-codes" target="_blank">Ann Nguyen</a>
         for
         <a href="https://bit.ly/2Zad7lw" target="_blank">The Odin Project</a>.
       </p>
